// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AppLink component Reders a App Link with all data 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "maxWidth": "1024px",
        }
      }
    >
      <div
        className="container"
      >
        <div
          className="title"
        >
          <span>
            Score Guides
          </span>
        </div>
        <div
          className="linkImg"
        >
          <img
            alt="Score Guides"
            src="http://google.com"
          />
        </div>
        <div
          className="desc"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        </div>
        <div>
          <a
            aria-label="Link"
            href="http://www.smarterbalanced.org/assessments/practice-and-training-tests/resources-and-documentation/#tab-3"
          >
            <div
              className="container"
            >
              <span>
                Visit Score Guides Page
              </span>
              <svg
                fill="none"
                height="24"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="5"
                  x2="19"
                  y1="12"
                  y2="12"
                />
                <polyline
                  points="12 5 19 12 12 19"
                />
              </svg>
            </div>
            <style
              jsx={true}
            >
              
      * {
        margin: 0;
        padding: 0;
      }
      a {
        text-decoration: none !important;
        color: #ebebeb;
      }
      a:hover {
        color: #63666A;
      }
      .container {
        display: inline-flex;
        min-height: 35px;
        border-radius: 5px;
        background-image: linear-gradient(90deg, #006298, #0085AD);
        align-items: center;
        justify-content: center;
        width: 230px;
      }
      a div span {
        padding-right: 10px;
      }
    
            </style>
          </a>
        </div>
        <style
          jsx={true}
        >
          
      * {
        margin: 0;
        padding: 0;
      }
      div {
        padding: 4px;
      }
      .container {
        text-align: center;
        max-width: 450px;
      }
      .title span {
        color: #006298;
        font-size: 20px;
        font-weight: 500;
      }
      .linkImg {
        border: 1px solid;
        min-height: 180px;
      }
      .desc {
        text-align: justify;
      }
    
        </style>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AppLink component Renders a App Link Button 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "maxWidth": "1024px",
        }
      }
    >
      <a
        aria-label="Link"
        href="http://www.smarterbalanced.org/assessments/practice-and-training-tests/resources-and-documentation/#tab-3"
      >
        <div
          className="container"
        >
          <span>
            Visit Score Guides Page
          </span>
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="5"
              x2="19"
              y1="12"
              y2="12"
            />
            <polyline
              points="12 5 19 12 12 19"
            />
          </svg>
        </div>
        <style
          jsx={true}
        >
          
      * {
        margin: 0;
        padding: 0;
      }
      a {
        text-decoration: none !important;
        color: #ebebeb;
      }
      a:hover {
        color: #63666A;
      }
      .container {
        display: inline-flex;
        min-height: 35px;
        border-radius: 5px;
        background-image: linear-gradient(90deg, #006298, #0085AD);
        align-items: center;
        justify-content: center;
        width: 230px;
      }
      a div span {
        padding-right: 10px;
      }
    
        </style>
      </a>
    </div>
  </div>
</div>
`;
